--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,7 @@
         app:srcCompat="@drawable/logo1" />
 
     <EditText
-        android:id="@+id/editText"
+        android:id="@+id/username"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/imageView"
@@ -31,10 +31,10 @@
         android:text="" />
 
     <EditText
-        android:id="@+id/editText2"
+        android:id="@+id/password"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/editText"
+        android:layout_below="@+id/username"
         android:layout_centerHorizontal="true"
         android:drawableLeft="@drawable/lock"
         android:ems="10"
@@ -46,20 +46,18 @@
         android:id="@+id/cardView"
         android:layout_width="170dp"
         android:layout_height="35dp"
-        android:layout_below="@+id/editText2"
+        android:layout_below="@+id/password"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="39dp"
         app:cardBackgroundColor="#00b300"
         app:cardCornerRadius="24dp">
 
         <RelativeLayout
+            android:id="@+id/login"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_alignParentStart="true"
-            android:layout_below="@+id/editText2"
-
-
-            >
+            android:layout_below="@+id/editText2">
 
             <TextView
                 android:id="@+id/textView"
