--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -6,7 +6,6 @@
     android:layout_height="match_parent"
     tools:context="com.example.prabh.teamphi.mvvm.activity.RegisterActivity.RegisterActivity">
 
-
     <ImageView
         android:id="@+id/imageView3"
         android:layout_width="200dp"
@@ -22,12 +21,10 @@
         android:layout_height="wrap_content"
         android:layout_alignStart="@+id/editText4"
         android:layout_below="@+id/imageView3"
-        android:layout_marginTop="63dp"
+        android:layout_marginTop="10dp"
         android:drawableLeft="@drawable/name"
-        android:ems="10"
         android:hint="  Name"
-        android:inputType="textPersonName"
-        android:text="" />
+        android:inputType="textPersonName" />
 
     <EditText
         android:id="@+id/editText4"
@@ -38,8 +35,7 @@
         android:drawableLeft="@drawable/email"
         android:ems="10"
         android:hint="  Email"
-        android:inputType="textPersonName"
-        android:text="" />
+        android:inputType="textEmailAddress" />
 
     <EditText
         android:id="@+id/editText5"
@@ -50,8 +46,7 @@
         android:drawableLeft="@drawable/phone"
         android:ems="10"
         android:hint="  Mobile No"
-        android:inputType="textPersonName"
-        android:text="" />
+        android:inputType="number" />
 
     <EditText
         android:id="@+id/editText6"
@@ -62,7 +57,7 @@
         android:drawableLeft="@drawable/lock"
         android:ems="10"
         android:hint="  Password"
-        android:inputType="textPersonName"
+        android:inputType="textPassword"
         android:text="" />
 
     <EditText
@@ -74,30 +69,29 @@
         android:drawableLeft="@drawable/lock"
         android:ems="10"
         android:hint="  Confirm Password"
-        android:inputType="textPersonName"
-        android:text="" />
+        android:inputType="textPassword" />
 
     <android.support.v7.widget.CardView
         android:layout_width="170dp"
         android:layout_height="35dp"
         android:layout_below="@+id/editText7"
         android:layout_centerHorizontal="true"
+        android:layout_centerInParent="true"
         android:layout_marginTop="149dp"
-        app:cardCornerRadius="24dp"
         app:cardBackgroundColor="#00b300"
-        android:layout_centerInParent="true">
+        app:cardCornerRadius="24dp">
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
+
             <TextView
                 android:id="@+id/textView3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Request Login"
-                android:textColor="#000000"
                 android:layout_centerInParent="true"
-                />
+                android:text="Request Login"
+                android:textColor="#000000" />
         </RelativeLayout>
     </android.support.v7.widget.CardView>
 </RelativeLayout>
