--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -23,7 +23,6 @@
         android:layout_height="wrap_content"
         android:layout_alignStart="@+id/editText4"
         android:layout_below="@+id/imageView3"
-        android:layout_marginTop="63dp"
         android:drawableLeft="@drawable/name"
         android:ems="10"
         android:hint="  Name"
@@ -39,18 +38,6 @@
         android:drawableLeft="@drawable/email"
         android:ems="10"
         android:hint="  Email"
-        android:inputType="textPersonName"
-        android:text="" />
-
-    <EditText
-        android:id="@+id/editText5"
-        android:layout_width="250dp"
-        android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/editText4"
-        android:layout_below="@+id/editText4"
-        android:drawableLeft="@drawable/phone"
-        android:ems="10"
-        android:hint="  Mobile No"
         android:inputType="textPersonName"
         android:text="" />
 
@@ -86,19 +73,24 @@
         android:layout_marginTop="149dp"
         app:cardCornerRadius="24dp"
         app:cardBackgroundColor="#00b300"
-        android:layout_centerInParent="true">
+        android:layout_centerInParent="true"
+        android:id="@+id/cardView2">
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-            <TextView
-                android:id="@+id/textView3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Request Login"
-                android:textColor="#000000"
-                android:layout_centerInParent="true"
-                />
-        </RelativeLayout>
     </android.support.v7.widget.CardView>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentBottom="true"
+        android:layout_alignStart="@+id/cardView2"
+        android:layout_marginBottom="44dp">
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:text="Request Login"
+            android:textColor="#000000" />
+    </RelativeLayout>
 </RelativeLayout>
