--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,7 +24,7 @@
         android:layout_below="@+id/imageView"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="33dp"
-        android:drawableLeft="@drawable/userr"
+        android:drawableLeft="@drawable/name"
         android:ems="10"
         android:hint="  Username"
         android:inputType="textPersonName"
@@ -38,8 +38,8 @@
         android:layout_centerHorizontal="true"
         android:drawableLeft="@drawable/lock"
         android:ems="10"
-        android:hint="Password"
-        android:inputType="textPersonName"
+        android:hint="  Password"
+        android:inputType="textPassword"
         android:text="" />
 
     <android.support.v7.widget.CardView
@@ -50,7 +50,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="39dp"
         app:cardBackgroundColor="#00b300"
-        app:cardCornerRadius="24dp">
+        app:cardCornerRadius="18dp">
 
         <RelativeLayout
             android:id="@+id/login"
