--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -9,7 +9,7 @@
     <ImageView
         android:id="@+id/imageView3"
         android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:layout_height="170dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="12dp"
@@ -17,18 +17,19 @@
 
     <EditText
         android:id="@+id/editText3"
-        android:layout_width="250dp"
+        android:layout_width="280dp"
         android:layout_height="wrap_content"
         android:layout_alignStart="@+id/editText4"
         android:layout_below="@+id/imageView3"
         android:layout_marginTop="10dp"
+
         android:drawableLeft="@drawable/name"
         android:hint="  Name"
         android:inputType="textPersonName" />
 
     <EditText
         android:id="@+id/editText4"
-        android:layout_width="250dp"
+        android:layout_width="280dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/editText3"
         android:layout_centerHorizontal="true"
@@ -38,22 +39,11 @@
         android:inputType="textEmailAddress" />
 
     <EditText
-        android:id="@+id/editText5"
-        android:layout_width="250dp"
+        android:id="@+id/editText6"
+        android:layout_width="280dp"
         android:layout_height="wrap_content"
         android:layout_alignStart="@+id/editText4"
         android:layout_below="@+id/editText4"
-        android:drawableLeft="@drawable/phone"
-        android:ems="10"
-        android:hint="  Mobile No"
-        android:inputType="number" />
-
-    <EditText
-        android:id="@+id/editText6"
-        android:layout_width="250dp"
-        android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/editText5"
-        android:layout_below="@+id/editText5"
         android:drawableLeft="@drawable/lock"
         android:ems="10"
         android:hint="  Password"
@@ -62,7 +52,7 @@
 
     <EditText
         android:id="@+id/editText7"
-        android:layout_width="250dp"
+        android:layout_width="280dp"
         android:layout_height="wrap_content"
         android:layout_alignStart="@+id/editText6"
         android:layout_below="@+id/editText6"
@@ -72,18 +62,21 @@
         android:inputType="textPassword" />
 
     <android.support.v7.widget.CardView
+        android:id="@+id/cardView3"
         android:layout_width="170dp"
         android:layout_height="35dp"
-        android:layout_below="@+id/editText7"
+        android:layout_alignParentBottom="true"
+        android:layout_marginTop="30dp"
         android:layout_centerHorizontal="true"
-        android:layout_centerInParent="true"
-        android:layout_marginTop="149dp"
+        android:layout_marginBottom="50dp"
         app:cardBackgroundColor="#00b300"
-        app:cardCornerRadius="24dp">
+        app:cardCornerRadius="18dp">
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:layout_alignParentBottom="true"
+            android:layout_alignStart="@+id/cardView3">
 
             <TextView
                 android:id="@+id/textView3"
