--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -16,59 +16,69 @@
         app:srcCompat="@drawable/logo1" />
 
     <EditText
-        android:id="@+id/editText3"
+        android:id="@+id/name"
         android:layout_width="280dp"
         android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/editText4"
+        android:layout_alignStart="@+id/email"
         android:layout_below="@+id/imageView3"
         android:layout_marginTop="10dp"
-
         android:drawableLeft="@drawable/name"
-        android:hint="  Name"
+        android:hint="Name"
         android:inputType="textPersonName" />
 
     <EditText
-        android:id="@+id/editText4"
+        android:id="@+id/email"
         android:layout_width="280dp"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/editText3"
+        android:layout_below="@+id/name"
         android:layout_centerHorizontal="true"
         android:drawableLeft="@drawable/email"
         android:ems="10"
-        android:hint="  Email"
+        android:hint="Email"
         android:inputType="textEmailAddress" />
 
     <EditText
-        android:id="@+id/editText6"
+        android:id="@+id/designation"
         android:layout_width="280dp"
         android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/editText4"
-        android:layout_below="@+id/editText4"
+        android:layout_below="@+id/email"
+        android:layout_centerHorizontal="true"
+        android:drawableLeft="@drawable/designation"
+        android:ems="10"
+        android:hint="Designation"
+        android:inputType="textEmailAddress" />
+
+    <EditText
+        android:id="@+id/register_password"
+        android:layout_width="280dp"
+        android:layout_height="wrap_content"
+        android:layout_alignStart="@+id/email"
+        android:layout_below="@+id/designation"
         android:drawableLeft="@drawable/lock"
         android:ems="10"
-        android:hint="  Password"
+        android:hint="Password"
         android:inputType="textPassword"
         android:text="" />
 
     <EditText
-        android:id="@+id/editText7"
+        android:id="@+id/confirm_password"
         android:layout_width="280dp"
         android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/editText6"
-        android:layout_below="@+id/editText6"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/register_password"
         android:drawableLeft="@drawable/lock"
         android:ems="10"
-        android:hint="  Confirm Password"
+        android:hint="Confirm Password"
         android:inputType="textPassword" />
 
     <android.support.v7.widget.CardView
-        android:id="@+id/cardView3"
+        android:id="@+id/request_login"
         android:layout_width="170dp"
         android:layout_height="35dp"
         android:layout_alignParentBottom="true"
-        android:layout_marginTop="30dp"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="50dp"
+        android:layout_marginTop="30dp"
         app:cardBackgroundColor="#00b300"
         app:cardCornerRadius="18dp">
 
