--- a/app/src/main/res/layout/activity_task.xml
+++ b/app/src/main/res/layout/activity_task.xml
@@ -20,12 +20,12 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.113">
-
-        <android.support.v7.widget.CardView
-            android:layout_width="14dp"
+        <View android:id="@+id/rectangle_at_the_top"
+            android:layout_width="18dp"
             android:layout_height="match_parent"
-            app:cardBackgroundColor="#33cc33" />
-
+            android:layout_alignParentTop="true"
+            android:background="#33cc33"
+            android:visibility="visible"/>
         <RelativeLayout
             android:layout_width="222dp"
             android:layout_height="match_parent"
@@ -91,6 +91,7 @@
                 android:id="@+id/price"
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
+                android:layout_alignBaseline="@+id/textView13"
                 android:layout_alignBottom="@+id/textView13"
                 android:layout_toEndOf="@+id/textView12" />
 
