Add Task,Task,Add Items,View Items. All fixed. Only Add Items not working.

--- a/app/src/main/res/layout/activity_item.xml
+++ b/app/src/main/res/layout/activity_item.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".mvvm.activity.taskactivity.TaskActivity">
-
+    tools:context=".mvvm.activity.itemactivity.ItemActivity">
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
         popupTheme="@style/ThemeOverlay.AppCompat.Light"
@@ -17,19 +17,19 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/baloo"
-            android:text="Tasks"
+            android:text="Items"
             android:textSize="25dp" />
     </android.support.v7.widget.Toolbar>
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/task_recycler_view"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/toolbar"
-        android:padding="5dp" />
+        android:id="@+id/items_recycler"
+        android:layout_below="@id/toolbar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+    </android.support.v7.widget.RecyclerView>
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/add_task"
+        android:id="@+id/add_items"
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:src="@drawable/add_fab"
