--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,17 +41,16 @@
         android:inputType="textPassword" />
 
     <android.support.v7.widget.CardView
-        android:id="@+id/cardView"
+        android:id="@+id/login"
         android:layout_width="170dp"
         android:layout_height="35dp"
         android:layout_below="@+id/password"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="39dp"
-        app:cardBackgroundColor="#00b300"
+        app:cardBackgroundColor="@color/colorPrimary"
         app:cardCornerRadius="24dp">
 
         <RelativeLayout
-            android:id="@+id/login"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_alignParentStart="true"
@@ -71,7 +70,7 @@
         android:id="@+id/register"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/cardView"
+        android:layout_below="@+id/login"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="22dp"
         android:text="Dont have account? Register here."
