--- a/app/src/main/res/layout/item_recycler.xml
+++ b/app/src/main/res/layout/item_recycler.xml
@@ -1,126 +1,129 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.example.prabh.teamphi.task">
+    android:layout_height="175dp"
+    android:layout_centerHorizontal="true">
 
     <android.support.v7.widget.CardView
-        android:layout_width="276dp"
-        android:layout_height="127dp"
-        android:layout_marginBottom="358dp"
-        android:layout_marginEnd="40dp"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="29dp"
-        android:elevation="5dp"
+        android:id="@+id/item"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:clickable="true"
+        android:foreground="?android:attr/selectableItemBackground"
         app:cardBackgroundColor="#d9d9d9"
         app:cardCornerRadius="10dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.113">
+        app:cardElevation="10dp">
 
         <View
-            android:id="@+id/rectangle_at_the_top"
+            android:id="@+id/rectangle_is_approved"
             android:layout_width="18dp"
             android:layout_height="match_parent"
             android:layout_alignParentTop="true"
             android:background="#33cc33" />
 
         <RelativeLayout
-            android:layout_width="222dp"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginLeft="14dp">
+            android:layout_margin="14dp">
 
             <TextView
-                android:id="@+id/textView11"
+                android:id="@+id/item_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
                 android:layout_marginStart="26dp"
                 android:fontFamily="@font/baloo"
-                android:text="ITEM" />
+                android:text="Item Name"
+                android:textSize="15sp" />
 
             <TextView
-                android:id="@+id/textView12"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignStart="@+id/textView13"
-                android:layout_below="@+id/textView11"
-                android:fontFamily="@font/baloo"
-                android:text="Type:" />
-
-            <TextView
-                android:id="@+id/textView13"
+                android:id="@+id/type_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
-                android:layout_below="@+id/textView12"
+                android:layout_below="@+id/item_name"
                 android:layout_marginLeft="10dp"
                 android:fontFamily="@font/baloo"
-                android:text="Price:" />
-
-            <TextView
-                android:id="@+id/textView14"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_below="@+id/textView13"
-                android:layout_marginLeft="10dp"
-                android:fontFamily="@font/baloo"
-                android:text="Quantity:" />
-
-            <TextView
-                android:id="@+id/textView15"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_below="@+id/textView14"
-                android:layout_marginLeft="10dp"
-                android:fontFamily="@font/baloo"
-                android:text="Date:" />
+                android:text="Item Type:"
+                android:textSize="15sp" />
 
             <TextView
                 android:id="@+id/type"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_above="@+id/textView13"
-                android:layout_toEndOf="@+id/textView13"
+                android:layout_alignStart="@+id/quantity"
+                android:layout_below="@+id/item_name"
                 android:fontFamily="@font/baloo"
-                tools:text="Tyre" />
-
-            <TextView
-                android:id="@+id/price"
-                android:layout_width="100dp"
-                android:layout_height="wrap_content"
-                android:layout_alignBaseline="@+id/textView13"
-                android:layout_alignBottom="@+id/textView13"
-                android:layout_toEndOf="@+id/textView12"
-                android:fontFamily="@font/baloo"
+                android:textSize="15sp"
                 tools:text="100" />
 
             <TextView
-                android:id="@+id/quantity"
-                android:layout_width="100dp"
+                android:id="@+id/price_text"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignBottom="@+id/textView14"
-                android:layout_toEndOf="@+id/textView14"
-                android:fontFamily="@font/baloo" />
+                android:layout_alignParentStart="true"
+                android:layout_below="@+id/type_text"
+                android:layout_marginLeft="10dp"
+                android:fontFamily="@font/baloo"
+                android:text="Price:"
+                android:textSize="15sp" />
+
+            <TextView
+                android:id="@+id/price"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignStart="@+id/quantity"
+                android:layout_below="@id/type_text"
+                android:fontFamily="@font/baloo"
+                android:textSize="15sp"
+                tools:text="3" />
+
+            <TextView
+                android:id="@+id/quantity_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_below="@+id/price_text"
+                android:layout_marginStart="10dp"
+                android:fontFamily="@font/baloo"
+                android:text="Quantity:"
+                android:textSize="15sp" />
+
+            <TextView
+                android:id="@+id/quantity"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_below="@+id/price_text"
+                android:layout_marginEnd="130dp"
+                android:fontFamily="@font/baloo"
+                android:textSize="15sp"
+                tools:text="25" />
+
+            <TextView
+                android:id="@+id/date_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_below="@+id/quantity_text"
+                android:layout_marginStart="10dp"
+                android:fontFamily="@font/baloo"
+                android:text="Purchase Date:"
+                android:textSize="15sp" />
 
             <TextView
                 android:id="@+id/date"
-                android:layout_width="100dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignBottom="@+id/textView15"
-                android:layout_toEndOf="@+id/textView12"
-                android:fontFamily="@font/baloo" />
-
-
+                android:layout_alignStart="@+id/quantity"
+                android:layout_below="@+id/quantity_text"
+                android:fontFamily="@font/baloo"
+                android:textSize="15sp"
+                tools:text="25/05/1998" />
         </RelativeLayout>
     </android.support.v7.widget.CardView>
-
-
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
