--- a/app/src/main/res/layout/task_recycler.xml
+++ b/app/src/main/res/layout/task_recycler.xml
@@ -1,26 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    tools:context="com.example.prabh.teamphi.task"
-    android:paddingTop="20dp"
-    android:paddingLeft="20dp"
-    android:paddingRight="20dp"
+    android:layout_height="175dp"
     android:layout_centerHorizontal="true">
 
     <android.support.v7.widget.CardView
-        android:layout_width="405dp"
-        android:layout_height="127dp"
-
-        android:elevation="5dp"
+        android:id="@+id/task"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:clickable="true"
+        android:foreground="?android:attr/selectableItemBackground"
         app:cardBackgroundColor="#d9d9d9"
         app:cardCornerRadius="10dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0">
+        app:cardElevation="10dp">
 
         <View
             android:id="@+id/rectangle_at_the_top"
@@ -30,9 +25,9 @@
             android:background="#33cc33" />
 
         <RelativeLayout
-            android:layout_width="222dp"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginLeft="14dp">
+            android:layout_margin="14dp">
 
             <TextView
                 android:id="@+id/task_name"
@@ -42,63 +37,93 @@
                 android:layout_alignParentTop="true"
                 android:layout_marginStart="26dp"
                 android:fontFamily="@font/baloo"
-                android:text="TaskName" />
+                android:text="TaskName"
+                android:textSize="15sp" />
 
             <TextView
-                android:id="@+id/textView13"
+                android:id="@+id/cost_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
                 android:layout_below="@+id/task_name"
                 android:layout_marginLeft="10dp"
                 android:fontFamily="@font/baloo"
-                android:text="Cost:" />
-
-            <TextView
-                android:id="@+id/textView14"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_below="@+id/textView13"
-                android:layout_marginLeft="10dp"
-                android:fontFamily="@font/baloo"
-                android:text="Quantity:" />
-
-            <TextView
-                android:id="@+id/textView15"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_below="@+id/textView14"
-                android:layout_marginLeft="10dp"
-                android:fontFamily="@font/baloo"
-                android:text="Date:" />
-
+                android:text="Cost:"
+                android:textSize="15sp" />
 
             <TextView
                 android:id="@+id/cost"
-                android:layout_width="100dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_alignStart="@+id/date"
                 android:layout_below="@+id/task_name"
-                android:layout_toEndOf="@+id/textView14"
                 android:fontFamily="@font/baloo"
+                android:textSize="15sp"
                 tools:text="100" />
 
             <TextView
-                android:id="@+id/task_quantity"
-                android:layout_width="100dp"
+                android:id="@+id/quantity_text"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignBottom="@+id/textView14"
-                android:layout_toEndOf="@+id/textView14"
-                android:fontFamily="@font/baloo" />
+                android:layout_alignParentStart="true"
+                android:layout_below="@+id/cost_text"
+                android:layout_marginLeft="10dp"
+                android:fontFamily="@font/baloo"
+                android:text="Quantity:"
+                android:textSize="15sp" />
+
+            <TextView
+                android:id="@+id/task_quantity"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignStart="@+id/date"
+                android:layout_below="@id/cost_text"
+                android:fontFamily="@font/baloo"
+                android:textSize="15sp"
+                tools:text="3" />
+
+            <TextView
+                android:id="@+id/date_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_below="@+id/quantity_text"
+                android:layout_marginStart="10dp"
+                android:fontFamily="@font/baloo"
+                android:text="Date:"
+                android:textSize="15sp" />
 
             <TextView
                 android:id="@+id/date"
-                android:layout_width="100dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/textView14"
-                android:layout_toEndOf="@+id/textView14"
-                android:fontFamily="@font/baloo" />
+                android:layout_alignParentEnd="true"
+                android:layout_below="@+id/quantity_text"
+                android:layout_marginEnd="130dp"
+                android:fontFamily="@font/baloo"
+                android:textSize="15sp"
+                tools:text="2018-06-25" />
+
+            <TextView
+                android:id="@+id/created_by_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_below="@+id/date_text"
+                android:layout_marginStart="10dp"
+                android:fontFamily="@font/baloo"
+                android:text="Created By:"
+                android:textSize="15sp" />
+
+            <TextView
+                android:id="@+id/created_by"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignStart="@+id/date"
+                android:layout_below="@+id/date_text"
+                android:fontFamily="@font/baloo"
+                android:textSize="15sp"
+                tools:text="Prabhat" />
         </RelativeLayout>
     </android.support.v7.widget.CardView>
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
