--- a/app/src/main/res/layout/activity_item.xml
+++ b/app/src/main/res/layout/activity_item.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".mvvm.activity.itemactivity.ItemActivity">
+
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
         popupTheme="@style/ThemeOverlay.AppCompat.Light"
@@ -13,29 +13,47 @@
         android:background="@color/colorPrimary"
         android:elevation="8dp">
 
-        <TextView
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/baloo"
-            android:text="Items"
-            android:textSize="25dp" />
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/baloo"
+                android:text="Tasks"
+                android:textSize="25dp" />
+
+            <ImageView
+                android:id="@+id/logout_items"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginStart="220dp"
+                android:src="@drawable/logout" />
+        </LinearLayout>
     </android.support.v7.widget.Toolbar>
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/items_recycler"
-        android:layout_below="@id/toolbar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-    </android.support.v7.widget.RecyclerView>
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/swipeRefreshLayoutItem"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/toolbar">
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/items_recycler"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </android.support.v4.widget.SwipeRefreshLayout>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/add_items"
         android:layout_width="150dp"
         android:layout_height="150dp"
-        android:src="@drawable/add_fab"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
         android:layout_marginBottom="25dp"
-        android:layout_marginEnd="32dp" />
+        android:layout_marginEnd="32dp"
+        android:src="@drawable/add_fab" />
 
 </RelativeLayout>
