--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -9,11 +9,11 @@
     <ImageView
         android:id="@+id/imageView3"
         android:layout_width="200dp"
-        android:layout_height="170dp"
+        android:layout_height="200dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="12dp"
-        app:srcCompat="@drawable/logo1" />
+        app:srcCompat="@drawable/team_logo" />
 
     <EditText
         android:id="@+id/name"
