--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,5 @@
 <resources>
     <color name="colorPrimary">#00b300</color>
     <color name="colorPrimaryDark">#353639</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#7ad47a</color>
 </resources>
